k8s/deployments/face-detection-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-detection-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: face-detection-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: face-detection-service
                port:
                  number: 80
